# prob_lab

./: README.md  pyproject.toml  requirements.txt
dataset/: data_info.md  readme.md
dataset/CSQA_preprocessed/: README.md
dataset/CSQA_preprocessed/data/: test-00000-of-00001-8a79b0575687f4c8.parquet  train-00000-of-00001-9a3e117974f3df72.parquet  validation-00000-of-00001-88293287a87edde2.parquet
dataset/MSRA命名实体识别数据集/: readme.md
dataset/mrpc/: README.md  create_dataset.py
dataset/sst2/data/: test-00000-of-00001.parquet  train-00000-of-00001.parquet  validation-00000-of-00001.parquet
probe/: README.md  __init__.py  data_loader.py  extractor.py  main.py  probe_model.py  run.py  train.py
probe/datasets/: __init__.py  loaders.py  registry.py
