[project]
name = "prob_lab"
version = "0.1.0"
description = "LLM layer representation probe experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "numpy",
    "pyarrow",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["probe"]
